# rocm_attn

./: .gitignore  CMakeLists.txt  README.md  setup.py
benchmark/: README.md  attn_shapes_unifolm_infer.txt  bench_attention.py  run_preset_benchmarks.sh  unifolm_attn_shape_counts.txt
python/rocm_attn_op/: __init__.py
python/test/: test_torch_interface.py
src/: attn_kernel.h  attn_kernel.hip.cpp  attn_kernel_torch.cu  attn_torch.cpp  attn_torch_hip.cpp
src/tests/: attn_test.cpp
